# admin-migrations

./: .gitignore  .pre-commit-config.yaml  README.md  README.md.template  environment.yml  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: migrate.yml  tests.yml
admin_migrations/: __main__.py  defaults.py
admin_migrations/migrators/: __init__.py  appveyor_cleanup.py  automerge_and_botrerun_labels.py  automerge_and_rerender.py  base.py  branch_protection.py  cfep13_azure_token_cleanup.py  cfep13_token_cleanup.py  cfep13_tokens_and_config.py  conda_forge_automerge.py  conda_forge_yml_test.py  dot_conda.py  enable_gha.py  feedstocks_service_update.py  (+11 more)
data/: AppveyorDelete.json  AppveyorForceDelete.json  AutomergeAndBotRerunLabels.json  AutomergeAndRerender.json  BranchProtection.json  CFEP13AzureTokenCleanup.json  CFEP13TokenCleanup.json  CFEP13TokensAndConfig.json  CFEP13TurnOff.json  CondaForgeAutomerge.json  CondaForgeAutomergeUpdate.json  CondaForgeGHAWithMain.json  CondaForgeMasterToMain.json  CondaForgeYAMLTest.json  DotConda.json  EnableGHAWorkflows.json  FeedstocksServiceUpdate.json  RAutomerge.json  RemoveAutomergeAndRerender.json  RotateCFStagingToken.json  RotateFeedstockToken.json  TeamsCleanup.json  TraviCINoOSXAMD64.json  TravisCIAutoCancelPRs.json  Username2IDMapping.json  WebhookCleanup.json  all_feedstocks.json  feedstocks.json  feedstocks_20241010-20260312.json
scripts/: clone_feedstock_outputs.sh  install_miniconda.sh  migrate_rerender.sh  migrate_rerender_done.txt
(+9 files in other folders)
