[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "admin_migrations"
version = "0.1"


[project.scripts]
run-admin-migrations = "admin_migrations.__main__:main"

[tool.setuptools]
packages = {find = {exclude=["data*", "scripts*"]}}

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
extend-select = ["E501", "UP", "RUF"]
ignore = [
    "E203", # allow spaces before colons
]
select = [
    "E", "F", "W"
]
preview = true

[tool.ruff.lint.pycodestyle]
max-line-length = 88
